# ifbook-backend

./: README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  swagger.yaml
ifbookbackend/: app.py  models.py  models.py.save  views.py
ifbookbackend/blueprints/exemplo/: exemplo.py
ifbookbackend/blueprints/exemplo/templates/exemplo/: upload.html
ifbookbackend/blueprints/users/: users.py
ifbookbackend/ext/: auth.py  configuration.py  database.py
ifbookbackend/templates/: index.html
migrations/versions/: 02ed71a97129_de_novo_de_novo.py  34d9b7a76700_nao_nula.py  3b7616b3f355_curso_adicionado.py  5599243ba593_correçao_da_tabela_user.py  56afa5f5d237_novos_atributos_para_usuario.py  74d782406e61_usuarios_fazem_varios_cursos.py  8b626fbd7356_teste.py  db3fa63860e3_usuarios_tem_amigos_de_novo.py  ec764e3cdcb5_usuarios_podem_ser_amigos.py
